--- a/final-project.html
+++ b/final-project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Weather API</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/final-project.css">
+    <link rel="stylesheet" href="styles/final-project.css">
     <script src="scripts/final-project.js" defer></script>
 </head>
 
